fix(panel): try whatever I can to stop iframe flickering

--- a/src/content/components/DictItem/_style.scss
+++ b/src/content/components/DictItem/_style.scss
@@ -38,10 +38,16 @@
 }
 
 .panel-DictItem_BodyMesure {
-  overflow: hidden;
+  padding: 10px 0;
 
-  > article {
-    margin: 10px 0;
+  // clear margin collapsing which seems to causing flickering
+  // when changing the parent height
+  > *:first-child {
+    margin-top: 0 !important;
+  }
+
+  > *:last-child {
+    margin-bottom: 0 !important;
   }
 }
 
@@ -89,14 +95,15 @@
 }
 
 .panel-DictItem_FoldMask {
-  display: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
   position: absolute;
+  left: 0;
   bottom: 0;
-  left: -10px;
-  right: -10px;
   width: 100%;
   height: 50px;
-  margin: auto;
   padding: 0;
   border: none;
   background: linear-gradient(transparent 40%, rgba(255, 255, 255, 0.3) 60%, rgba(255, 255, 255, 0.9) 100%);
@@ -125,20 +132,12 @@
       top: 0;
     }
   }
-
-  &.isActive {
-    display: block;
-  }
 }
 
 .panel-DictItem_FoldMaskArrow {
-  position: absolute;
   z-index: 10;
-  left: 50%;
-  bottom: 0;
   width: 15px;
   height: 15px;
-  transform: translateX(-50%);
   fill: #000;
 }
 
